@@ -12312,7 +12312,7 @@ body.dark-theme {
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-body.dark-theme nav .collapse {
+body.dark-theme .collapse {
   background-color: #333131 !important;
 }
 
@@ -12330,7 +12330,7 @@ body.dark-theme nav .collapse {
   background-color: #333131 !important;
   color: #ffffff;
 }
-.dark-theme nav, .dark-theme footer {
+.dark-theme nav, .dark-theme footer, .dark-theme .top-navbar-search {
   background-color: #333131 !important;
 }
 .dark-theme .img-dark-invert, .dark-theme .navbar-toggler-icon {
@@ -12352,10 +12352,19 @@ body.dark-theme nav .collapse {
 .dark-theme .modal-header button {
   filter: invert(1);
 }
+.dark-theme .accordion .accordion-item .accordion-collapse {
+  background-color: white !important;
+}
 
 /* result page section */
 .card.search-result {
   border: none !important;
+}
+
+/* search part of the mobile navbar */
+.top-navbar-search {
+  background-color: #f8f9fa !important;
+  padding: 7px;
 }
 
 /*# sourceMappingURL=style.css.map */
