@@ -108,7 +108,20 @@
                             </div>
                             </div>
                         </div>
+                        <div class="accordion-item">
+                            <h5 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                Quando uso lo smartphone a cosa serve lo switch sulla barra in basso?
+                            </button>
+                            </h5>
+                            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>Nello smartphone lo switch sulla navbar</strong> Serve a cambiare il tema, per regolarlo secondo le tue preferenze.<br>
+                                Su schermo e tablet è possibile anche vedere le icone a fianco di luce e buio.
+                            </div>
+                            </div>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
