@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-5 d-flex align-items-start" id="carousel-container">
+                <div class="col-md-5 d-flex align-items-start mb-3" id="carousel-container">
                 </div>
                 <div class="col-md-7 d-flex align-items-center car-details-table roundend overflow-hidden border">    
                     <table class="table table-striped-columns">
