@@ -2,13 +2,14 @@ import * as device from './size-device_bootstrap.js'
 
 /* define constants */
 const NAVBARDISTANCEDESKTOP = 75;
-const NAVBARDISTANCEMOBILE = 50;
+const NAVBARDISTANCEMOBILEBOTTOM = 50;
+const NAVBARDISTANCEMOBILETOP = 65;
 
 function resizer(){
         /* add a space to separate the content-page from the navbar */
         if(window.innerWidth < device.getBootstrapBreakPointValue('md')){
-            document.getElementById("navbar-spacer-bottom").style.height = `${NAVBARDISTANCEMOBILE}px`;
-            document.getElementById("navbar-spacer-top").style.height = `0px`;
+            document.getElementById("navbar-spacer-bottom").style.height = `${NAVBARDISTANCEMOBILEBOTTOM}px`;
+            document.getElementById("navbar-spacer-top").style.height = `${NAVBARDISTANCEMOBILETOP}px`;
         }else{
             document.getElementById("navbar-spacer-top").style.height = `${NAVBARDISTANCEDESKTOP}px`;
             document.getElementById("navbar-spacer-bottom").style.height = `0px`;
